--- a/EoDData.Net/EoDData.Net.Tests/EoDData.Net.Tests.csproj
+++ b/EoDData.Net/EoDData.Net.Tests/EoDData.Net.Tests.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Pineapple" Version="1.0.30" />
   </ItemGroup>
 
   <ItemGroup>
