--- a/.gitignore
+++ b/.gitignore
@@ -226,7 +226,7 @@ ClientBin/
 *.dbmdl
 *.dbproj.schemaview
 *.jfm
-*.pfx
+# *.pfx
 *.publishsettings
 orleans.codegen.cs
 
@@ -361,3 +361,9 @@ ehthumbs.db
 ._*
 # Icon?
 Thumbs.db
+
+# Sonarqube
+.sonarqube
+
+# Sonarlint
+.sonarlint
