Included new environment variable

--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -29,5 +29,6 @@ jobs:
         env:
           EoDDataUsername: ${{ secrets.EOD_DATA_USERNAME }}
           EoDDataPassword: ${{ secrets.EOD_DATA_PASSWORD }}
+          EoDDataBaseUrl: http://ws.eoddata.com/data.asmx/
         run: |
           dotnet test EoDData.Net.Tests/EoDData.Net.Tests.csproj --no-restore --verbosity normal
