included sonnar tool install

--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -10,13 +10,12 @@ on:
   workflow_dispatch:
 
 jobs:
-
   tests:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Restore Dependencies
         run: |
           dotnet restore EoDData.Net.sln
@@ -32,6 +31,9 @@ jobs:
           EoDDataBaseUrl: http://ws.eoddata.com/data.asmx/
         run: |
           dotnet test EoDData.Net.Tests/EoDData.Net.Tests.csproj --no-restore --verbosity normal
+
+      - name: Install SonarQube Scanner
+        run: dotnet tool install --global dotnet-sonarscanner
 
       - name: Begin SonarQube Scanner
         run: dotnet sonarscanner begin /key:"${GITHUB_REPOSITORY}" /d:sonar.host.url="${{secrets.SONARQUBE_HOST}}" /d:sonar.login="${{secrets.SONARQUBE_TOKEN}}" /d:sonar.scm.disabled=false /d:sonar.scm.provider=git /d:sonar.links.scm="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git" /d:sonar.cs.opencover.reportsPaths='**/coverage.opencover.xml'
