--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -20,31 +20,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Restore Dependencies
-        run: |
-          dotnet restore EoDData.Net.sln
-
-      - name: Build
-        run: |
-          dotnet build EoDData.Net.sln --no-restore /WarnAsError --configuration Release
-
-      - name: Test       
-        run: dotnet test EoDData.Net.Tests/EoDData.Net.Tests.csproj --no-restore --verbosity normal
-
       - name: Install SonarQube Scanner
         run: dotnet tool install --global dotnet-sonarscanner
 
       - name: Begin SonarQube Scanner
         run: dotnet sonarscanner begin /key:"EoDData.Net" /d:sonar.host.url="${{secrets.SONARQUBE_HOST}}" /d:sonar.login="${{secrets.SONARQUBE_TOKEN}}" /d:sonar.scm.disabled=false /d:sonar.scm.provider=git /d:sonar.links.scm="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git" /d:sonar.cs.opencover.reportsPaths='**/coverage.opencover.xml'
-
-      - name: Restore
-        run: dotnet restore
-
+      
       - name: Build
         run: dotnet build --no-restore --configuration Release
 
       - name: Test
-        run: dotnet test EoDData.Net.Tests/EoDData.Net.Tests.csproj --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\"
+        run: dotnet test --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\"
 
       - name: End SonarQube Scanner
         run: dotnet sonarscanner end /d:sonar.login="${{secrets.SONARQUBE_TOKEN}}"
