--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -12,20 +12,20 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    env: 
+    env:
       EoDDataUsername: ${{ secrets.EOD_DATA_USERNAME }}
       EoDDataPassword: ${{ secrets.EOD_DATA_PASSWORD }}
       EoDDataBaseUrl: http://ws.eoddata.com/data.asmx/
 
     steps:
-      - uses: actions/checkout@v2      
+      - uses: actions/checkout@v2
 
       - name: Install SonarQube Scanner
         run: dotnet tool install --global dotnet-sonarscanner
 
       - name: Begin SonarQube Scanner
-        run: dotnet sonarscanner begin /key:"EoDData.Net" /d:sonar.host.url="${{secrets.SONARQUBE_HOST}}" /d:sonar.login="${{secrets.SONARQUBE_TOKEN}}" /d:sonar.scm.disabled=false /d:sonar.scm.provider=git /d:sonar.links.scm="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git" /d:sonar.cs.opencover.reportsPaths='**/coverage.cobertura.xml'
-      
+        run: dotnet sonarscanner begin /key:"EoDData.Net" /d:sonar.host.url="${{secrets.SONARQUBE_HOST}}" /d:sonar.login="${{secrets.SONARQUBE_TOKEN}}" /d:sonar.scm.disabled=false /d:sonar.scm.provider=git /d:sonar.links.scm="${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}.git" /d:sonar.cs.opencover.reportsPaths='**/coverage.opencover.xml'
+
       - name: Restore Dependencies
         run: dotnet restore EoDData.Net.sln
 
@@ -33,7 +33,7 @@ jobs:
         run: dotnet build --no-restore --configuration Release
 
       - name: Test
-        run: dotnet test EoDData.Net.Tests/EoDData.Net.Tests.csproj --no-restore --collect:"XPlat Code Coverage"
+        run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute="Obsolete"
 
       - name: End SonarQube Scanner
         run: dotnet sonarscanner end /d:sonar.login="${{secrets.SONARQUBE_TOKEN}}"
