--- a/EoDData.Net/EoDData.Net.csproj
+++ b/EoDData.Net/EoDData.Net.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<Version>1.0.2-alpha</Version>
-		<AssemblyVersion>1.0.2.0</AssemblyVersion>
-		<FileVersion>1.0.2.0</FileVersion>
+		<TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+		<Version>1.0.3-alpha</Version>
+		<AssemblyVersion>1.0.3.0</AssemblyVersion>
+		<FileVersion>1.0.3.0</FileVersion>
 		<Authors>MILL5</Authors>
 		<Description>A .NET class library for use against the EoDData APIs supporting .NET Standard, .NET Core, and the new .NET 5.0</Description>
 		<Copyright>Copyright © MILL5, LLC 2021</Copyright>
@@ -46,7 +46,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-		<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.2-alpha" />
+		<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.3-alpha" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
 		<PackageReference Include="Pineapple" Version="1.0.30" />
 	</ItemGroup>
