--- a/EoDData.Net/EoDData.Net.csproj
+++ b/EoDData.Net/EoDData.Net.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
-		<TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
-		<Version>1.0.4-alpha</Version>
-		<AssemblyVersion>1.0.4.0</AssemblyVersion>
-		<FileVersion>1.0.4.0</FileVersion>
+		<TargetFramework>net5.0</TargetFramework>
+		<Version>1.0.5-alpha</Version>
+		<AssemblyVersion>1.0.5.0</AssemblyVersion>
+		<FileVersion>1.0.5.0</FileVersion>
 		<Authors>MILL5</Authors>
 		<Description>A .NET class library for use against the EoDData APIs supporting .NET Standard, .NET Core, and the new .NET 5.0</Description>
 		<Copyright>Copyright © MILL5, LLC 2021</Copyright>
@@ -44,10 +44,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="10.1.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.3-alpha" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
-		<PackageReference Include="Pineapple" Version="1.0.30" />
+		<PackageReference Include="Pineapple" Version="1.0.32-alpha" />
 	</ItemGroup>
 </Project>
