--- a/EoDData.Net.Tests/EoDData.Net.Tests.csproj
+++ b/EoDData.Net.Tests/EoDData.Net.Tests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="coverlet.msbuild" Version="3.0.3">
+	<PackageReference Include="coverlet.msbuild" Version="3.1.0">
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  <PrivateAssets>all</PrivateAssets>
 	</PackageReference>
@@ -17,11 +17,11 @@
 	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
 	<PackageReference Include="MSTest.TestFramework" Version="2.2.5" />
 	<PackageReference Include="MSTest.TestAdapter" Version="2.2.5" />
-	<PackageReference Include="coverlet.collector" Version="3.0.3">
+	<PackageReference Include="coverlet.collector" Version="3.1.0">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
-	<PackageReference Include="Pineapple" Version="1.0.32-alpha" />
+	<PackageReference Include="Pineapple" Version="1.0.34" />
   </ItemGroup>
 
   <ItemGroup>
