--- a/EoDData.Net/EoDData.Net.csproj
+++ b/EoDData.Net/EoDData.Net.csproj
@@ -22,7 +22,7 @@
 		<PackageIcon>eodData.png</PackageIcon>
 		<CodeAnalysisRuleSet>..\.sonarlint\m5.eoddatacsharp.ruleset</CodeAnalysisRuleSet>
 		<SignAssembly>false</SignAssembly>
-		<AssemblyOriginatorKeyFile>EoDData.Net.Signing.Key.snk</AssemblyOriginatorKeyFile>		
+		<AssemblyOriginatorKeyFile>EoDData.Net.Signing.Key.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -46,6 +46,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.3-alpha" />
-		<PackageReference Include="Pineapple" Version="1.0.32-alpha" />
+		<PackageReference Include="Pineapple" Version="1.0.34" />
+		<PackageReference Include="Polly" Version="7.2.2" />
 	</ItemGroup>
 </Project>
