--- a/EoDData.Net/EoDData.Net.csproj
+++ b/EoDData.Net/EoDData.Net.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
 		<TargetFramework>net5.0</TargetFramework>
-		<Version>1.0.8-alpha</Version>
-		<AssemblyVersion>1.0.8.0</AssemblyVersion>
-		<FileVersion>1.0.8.0</FileVersion>
+		<Version>1.0.9</Version>
+		<AssemblyVersion>1.0.9.0</AssemblyVersion>
+		<FileVersion>1.0.9.0</FileVersion>
 		<Authors>MILL5</Authors>
 		<Description>A .NET class library for use against the EoDData APIs supporting .NET Standard, .NET Core, and the new .NET 5.0</Description>
 		<Copyright>Copyright © MILL5, LLC 2021</Copyright>
@@ -22,7 +22,7 @@
 		<PackageIcon>eodData.png</PackageIcon>
 		<CodeAnalysisRuleSet>..\.sonarlint\m5.eoddatacsharp.ruleset</CodeAnalysisRuleSet>
 		<SignAssembly>false</SignAssembly>
-		<AssemblyOriginatorKeyFile>EoDData.Net.Signing.Key.snk</AssemblyOriginatorKeyFile>		
+		<AssemblyOriginatorKeyFile>EoDData.Net.Signing.Key.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -46,6 +46,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.3-alpha" />
-		<PackageReference Include="Pineapple" Version="1.0.32-alpha" />
+		<PackageReference Include="Pineapple" Version="1.0.34" />
+		<PackageReference Include="Polly" Version="7.2.2" />
 	</ItemGroup>
 </Project>
