In step --> End SonarCloud Scanner, add env.SONAR_TOKEN

--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -54,4 +54,4 @@ jobs:
         run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:ExcludeByAttribute="Obsolete"
 
       - name: End SonarCloud Scanner
-        run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        run: dotnet-sonarscanner end /d:sonar.login="${{ env.SONAR_TOKEN }}"
