--- a/EoDData.Net/EoDData.Net.csproj
+++ b/EoDData.Net/EoDData.Net.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<LangVersion>latest</LangVersion>
 		<TargetFramework>net6.0</TargetFramework>
-		<Version>1.0.16</Version>
-		<AssemblyVersion>1.0.16.0</AssemblyVersion>
-		<FileVersion>1.0.16.0</FileVersion>
+		<Version>1.0.17</Version>
+		<AssemblyVersion>1.0.17.0</AssemblyVersion>
+		<FileVersion>1.0.17.0</FileVersion>
 		<Authors>MILL5</Authors>
 		<Description>A .NET class library for use against the EoDData APIs supporting .NET Standard, .NET Core, .NET 5.0, and the new .NET 6.0</Description>
 		<Copyright>Copyright © MILL5, LLC 2021</Copyright>
@@ -40,8 +40,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-		<PackageReference Include="M5.FinancialDataSanitizer" Version="1.0.3-alpha" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+		<PackageReference Include="Cph.FinancialDataSanitizer" Version="1.0.16" />
 		<PackageReference Include="Pineapple" Version="1.0.36" />
 		<PackageReference Include="Polly" Version="7.2.3" />
 	</ItemGroup>
