--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: 🧪 Run Tests
         continue-on-error: true
-        run: dotnet-coverage collect 'dotnet test EoDData.Net.Tests --no-build --verbosity minimal' -f xml  -o 'coverage.xml'
+        run: dotnet-coverage collect 'dotnet test EoDData.Net.Tests --verbosity minimal' -f xml  -o 'coverage.xml'
 
       - name: ☁️ End SonarCloud Scanner
         run: dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
